# rPPGAnalysis

./: .gitignore  Extract_Signal.py  README.md  extract.py  main.py  pyproject.toml  utils.py
pages/: Evaluate.py  Parse_Reference_Data.py
src/: extract.py  landmarks.py  parsing.py
src/methods/: green.py  pos.py  rhythmmamba.py  rythmmamba.py  utils.py
